# Figma-storybook-agent

./: .env.example  .gitignore  mcp-config.yaml  pyproject.toml  запросы от дизайнеров.md
scripts/: get_figma_info.py  init_db.py  list_figma_files.py  test_figma_mcp.py
src/: app.py  design_system_index.json
src/figma_api/: __init__.py  analytics.py  client.py  comments.py  components.py  files.py  styles.py  teams.py
src/tools/: figma_tools.py
